--- a/Sound/Soundwave Visualization/index.html
+++ b/Sound/Soundwave Visualization/index.html
@@ -8,6 +8,9 @@
     <script src="../../lib/p5.min.js"></script>
     <script src="../../lib/p5.dom.js"></script>
     <script src="../../lib/p5.sound.min.js"></script>
+    <style>
+        html, body {padding: 0; margin: 0;}
+    </style>
 </head>
 <body>
     <script src="sketch.js"></script>
